Overall progress, styling, work on server status, created security class for passwords

--- a/11thLauncher/Resources/Strings.es-ES.resx
+++ b/11thLauncher/Resources/Strings.es-ES.resx
@@ -136,7 +136,7 @@
     <value>Opciones 11th MEU Launcher</value>
   </data>
   <data name="S_BTN_ABOUT" xml:space="preserve">
-    <value>Ayuda</value>
+    <value>Acerca de</value>
   </data>
   <data name="S_BTN_ABOUT_TIP" xml:space="preserve">
     <value>Acerca del launcher</value>
