--- a/11thLauncher/Resources/Strings.resx
+++ b/11thLauncher/Resources/Strings.resx
@@ -113,7 +113,7 @@
     <value>11th MEU Launcher Settings</value>
   </data>
   <data name="S_BTN_ABOUT" xml:space="preserve">
-    <value>Help</value>
+    <value>About</value>
   </data>
   <data name="S_BTN_ABOUT_TIP" xml:space="preserve">
     <value>About the launcher</value>
