--- a/11thLauncher/Resources/Strings.resx
+++ b/11thLauncher/Resources/Strings.resx
@@ -451,4 +451,28 @@
   <data name="S_LABEL_SERVER_PLAYERS" xml:space="preserve">
     <value>Players:</value>
   </data>
+  <data name="S_LABEL_PROFILE_LIST" xml:space="preserve">
+    <value>List of profiles</value>
+  </data>
+  <data name="S_NEW_PROFILE_NAME" xml:space="preserve">
+    <value>New profile name</value>
+  </data>
+  <data name="S_LABEL_SAVE_PROFILE" xml:space="preserve">
+    <value>Save profile</value>
+  </data>
+  <data name="S_BTN_PROFILE_FAVORITE" xml:space="preserve">
+    <value>Mark as favorite</value>
+  </data>
+  <data name="S_BTN_PROFILE_CREATE" xml:space="preserve">
+    <value>Create new profile</value>
+  </data>
+  <data name="S_BTN_PROFILE_DELETE" xml:space="preserve">
+    <value>Delete profile</value>
+  </data>
+  <data name="S_BTN_PROFILE_EDIT" xml:space="preserve">
+    <value>Edit profile</value>
+  </data>
+  <data name="S_LABEL_PROFILE_NAME" xml:space="preserve">
+    <value>Profile name</value>
+  </data>
 </root>
