--- a/11thLauncher/Resources/Strings.es-ES.resx
+++ b/11thLauncher/Resources/Strings.es-ES.resx
@@ -186,15 +186,6 @@
   <data name="S_PORT" xml:space="preserve">
     <value>Puerto</value>
   </data>
-  <data name="S_PRESET1" xml:space="preserve">
-    <value>Guerra Moderna</value>
-  </data>
-  <data name="S_PRESET2" xml:space="preserve">
-    <value>Guerra Moderna [ALiVE]</value>
-  </data>
-  <data name="S_PRESET3" xml:space="preserve">
-    <value>Vietnam [Unsung]</value>
-  </data>
   <data name="S_PRIORITY" xml:space="preserve">
     <value>Prioridad:</value>
   </data>
@@ -494,5 +485,17 @@
   </data>
   <data name="S_LABEL_PROFILE_NAME" xml:space="preserve">
     <value>Nombre del perfil</value>
+  </data>
+  <data name="S_MSG_UPDATE_SUCCESS_CONTENT" xml:space="preserve">
+    <value>La aplicación ha sido actualizada con éxito</value>
+  </data>
+  <data name="S_MSG_UPDATE_SUCCESS_TITLE" xml:space="preserve">
+    <value>Aplicación actualizada</value>
+  </data>
+  <data name="S_MSG_UPDATE_FAIL_TITLE" xml:space="preserve">
+    <value>Error al actualizar</value>
+  </data>
+  <data name="S_MSG_UPDATE_FAIL_CONTENT" xml:space="preserve">
+    <value>Se ha producido un error al actualizar la aplicación, vuelve a intentarlo más tarde</value>
   </data>
 </root>
